--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -73,6 +73,7 @@
                     #description name="description" type="textarea" rows="4"
                     value={{this.productInfo?.description}}
                 > </textarea><br>
+                Image<br>
                 <input
                     type="file"
                     name="image"
