--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,4 +1,4 @@
-<div class='page details m-0 p-0'>
+<div id="top" class='page details m-0 p-0'>
     <div
         class="top row justify-content-lg-center align-items-start"
         style.background-image="linear-gradient(#0007,#0007), url('{{this.productInfo?.img}}')"
@@ -13,7 +13,7 @@
                 <p>{{this.productInfo?.description}}</p>
                 Property {{this.productInfo?.id}}<br><br>
                 <!-- <button style="width:50%" class="btn-white-outline">Learn more</button> -->
-                <a style="width:50%; font-size:14px" class="btn-white-outline text-center"routerLink='/products'>More Properties</a>
+                <a style="width:50%; font-size:14px" class="btn-white-outline text-center" routerLink='/products'>More Properties</a>
 
             </div>
         </div>
