--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -182,7 +182,7 @@
                         Type: {{this.product.type}}<br>
                         Rooms: {{this.product.rooms}}<br>
                         </p>
-                        <a class="text-decoration-underline" routerLink="/details/{{this.product.id}}">View Property</a>
+                        <a class="text-decoration-underline" routerLink="/details/{{this.product.id}}/#page" fragment="top">View Property</a>
                     </div>
                 </ng-container><br><br>
             </div>
