--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -15,7 +15,7 @@
                         <p>Find your place with an immersive photo experience and the most listings, including things you won't find anywhere else.
                         Zillow makes it easy to find the right loan, so you can get the home you want.
                         </p>
-                        <button style="width:50%" class="btn-white-outline">Learn more</button>
+                        <button routerLink="/" fragment="properties" style="width:50%; font-size:15px" class="btn-white-outline">Properties</button>
                     </div>
                 </div>
                 <div class="right mx-auto col-12 col-lg-6 text-left py-lg-5 px-lg-5">
