--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -38,7 +38,7 @@
         <div class="col-lg-5 text-left px-lg-5">
             <div class="row justify-content-lg-center align-items-start px-lg-5">
                 <p>
-                <strong style="font-weight:700; font-size:32px">${{this.productInfo?.price}}.00
+                <strong style="font-weight:700; font-size:32px">${{this.productInfo?.price}}
                 </strong><br>
                 <strong>{{this.productInfo?.name}}</strong><br><br>
                 {{this.productInfo?.description}}<br><br>
