--- a/src/styles.scss
+++ b/src/styles.scss
@@ -100,7 +100,7 @@ body, html{
     background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (5).jpg") no-repeat; background-position: 0% 65%;
     background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (8).jpg") no-repeat; background-position: 0% 100%;
     background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (11).jpg") no-repeat; background-position: 0% 70%;
-    background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (52).jpg") no-repeat; background-position: 0% 70%;
+    // background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (52).jpg") no-repeat; background-position: 0% 90%;
 
 
     background-size: cover;
