--- a/src/styles.scss
+++ b/src/styles.scss
@@ -152,10 +152,13 @@ body, html{
       // background-size: 400% !important;
 
 
-      background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (3).jpg") no-repeat; background-position: 7% 50%;
-      background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (171).jpg") no-repeat; background-position: 24% 100%;
+      background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (3).jpg") no-repeat; background-position: 0% 0%;
+      background-size: 410% !important;
 
-      background-size: 500% !important;
+
+      // background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (171).jpg") no-repeat; background-position: 24% 100%;
+      // background-size: 500% !important;
+
 
 
       // background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (11).jpg") no-repeat; background-position: 100% 100%;
