--- a/src/styles.scss
+++ b/src/styles.scss
@@ -153,7 +153,7 @@ body, html{
 
 
       background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (3).jpg") no-repeat; background-position: 0% 0%;
-      background-size: 410% !important;
+      background-size: 410%;
 
 
       // background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (171).jpg") no-repeat; background-position: 24% 100%;
@@ -166,7 +166,7 @@ body, html{
 
 
       // background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (55) mobile.jpg") no-repeat; background-position: 40% 90%;
-      background-size: cover;
+      // background-size: cover;
     }
 }
 
