--- a/src/styles.scss
+++ b/src/styles.scss
@@ -142,31 +142,21 @@ body, html{
 
       // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (469).jpg") no-repeat; background-position: 30% 50%;
       // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (27).jpg") no-repeat; background-position: 20% 50%;
-
-
       // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (92).jpg") no-repeat; background-position: 5% 90%;
-      // background-size: 550% !important;
-
-
+      // background-size: 550%;
       // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (27).jpg") no-repeat; background-position: 70% 50%;
-      // background-size: 400% !important;
-
-
-      background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (3).jpg") no-repeat; background-position: 0% 0%;
-      background-size: 410%;
-
-
-      // background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (171).jpg") no-repeat; background-position: 24% 100%;
-      // background-size: 500% !important;
-
-
+      // background-size: 400%;
+      // background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (3).jpg") no-repeat; background-position: 0% 0%;
+      // background-size: 410%;
 
       // background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (11).jpg") no-repeat; background-position: 100% 100%;
-      // background-size: 450% !important;
-
-
+      // background-size: 450%;
       // background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (55) mobile.jpg") no-repeat; background-position: 40% 90%;
       // background-size: cover;
+
+
+      background: linear-gradient(to right, #0005,#0000), url("./assets/real-estate (171).jpg") no-repeat; background-position: 68% 10%;
+      background-size: 500%;
     }
 }
 
