--- a/src/styles.scss
+++ b/src/styles.scss
@@ -105,6 +105,7 @@ body, html{
     // background-size: 135% !important;
 
     background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (171).jpg") no-repeat; background-position: 0% 90%;
+    background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (176).jpg") no-repeat; background-position: 0% 90%;
 
 
     background-size: cover;
